Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-120508

Qt Linguist: Unreadable HTML tags in dark mode

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P3: Somewhat important
    • 6.9.1, 6.10.0 FF
    • 5.15.11
    • Tools: Linguist
    • None
    • Fedora 39
      KDE Plasma 5.27.9

    • Linux/X11
    • 0d0c99fa0 (dev), ff236b0bd (6.9)

    Description

      Steps to reproduce:

      1. Set your desktop environment to a dark mode (in KDE's Plasma it's Breeze Dark)
      2. Download sqlb_pl.ts
      3. Open sqlb_pl.ts in Qt Linguist
      4. Select the "About Dialog" entry in a "Context" view
      5. Select the last entry in a "Strings" view

      Result:

      Unreadable HTML tags in the "Source text" view, as seen below.

      Expected Result:

      HTML tags should be readable.

      Additional info:

      HTML tags don't follow theme's colors and have the same colors (i.e. dark blue and burgundy) regardless of dark or light mode set in the desktop environment.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            masoud.jami Masoud Jami
            wojnilowicz wojnilowicz
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes