linguist: consider system color mode for better visibility

Adjust visible colors in linguist according to the dark/light mode
of the system. The linguist should react to mode changes and
represent colors that are visible in dark and light mode
of Windows, Mac, and Linux (Gnome & KDE).

Fixes: QTBUG-120508
Fixes: QTBUG-127452
Fixes: QTBUG-136578
Change-Id: I513279bbf69ecf786ca782931fbb01f313eec2d4
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>
(cherry picked from commit 0d0c99fa05193a288122ab6b4b7741709c8d207f)
Reviewed-by: Kai Köhne <kai.koehne@qt.io>