src/linguist/linguist/globals.cpp
@@ -2,6 +2,10 @@
 // SPDX-License-Identifier: LicenseRef-Qt-Commercial OR GPL-3.0-only WITH Qt-GPL-exception-1.0
 
 #include "globals.h"
+#include <QColor>
+#include <QApplication>
+#include <QStyleHints>
+#include <QPalette>
 
 const QString &settingsPrefix()
 {
@@ -14,4 +18,18 @@ const QString &settingsPrefix()
 QString settingPath(const char *path)
 {
     return settingsPrefix() + QLatin1String(path);
+}
+
+// Check for "Dark Mode", either system-wide or usage of a dark style
+static bool isLight(const QColor &textColor)
+{
+    constexpr int DarkThreshold = 200;
+    return textColor.red() > DarkThreshold && textColor.green() > DarkThreshold
+            && textColor.blue() > DarkThreshold;
+}
+
+bool isDarkMode()
+{
+    return QGuiApplication::styleHints()->colorScheme() == Qt::ColorScheme::Dark
+            || isLight(QGuiApplication::palette().color(QPalette::WindowText));
 }
